// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Pashto On Demand TV Page A11y I can see the skip to content link 1`] = `"مطلب ته ورشئ"`;

exports[`Canonical Pashto On Demand TV Page Analytics ATI tracking pixel excluding src 1`] = `
<img
  alt=""
  height="1px"
  style="position:absolute"
  width="1px"
/>
`;

exports[`Canonical Pashto On Demand TV Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/"`;

exports[`Canonical Pashto On Demand TV Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "68",
  },
  {
    "p": "pashto.bbc_pashto_tv.tv.w172xcldhhrhmcf.page",
  },
  {
    "x1": "[urn:bbc:pips:w172xcldhhrhmcf]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-pashto]",
  },
  {
    "x4": "[ps]",
  },
  {
    "x7": "[player-episode]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[د%20بي%20بي%20سي%20خبرونه%20%20-%20BBC%20News%20پښتو]",
  },
]
`;

exports[`Canonical Pashto On Demand TV Page Expired Episode I can see the 'Content is not available' placeholder 1`] = `"دغه فایل نور د لاسرسي وړ نه دی."`;

exports[`Canonical Pashto On Demand TV Page Expired Episode I can see the brand title 1`] = `" د بي بي سي خبرونه "`;

exports[`Canonical Pashto On Demand TV Page Expired Episode I can see the episode summary 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical Pashto On Demand TV Page Expired Episode I can see the episode title 1`] = `" د بي بي سي خبرونه "`;

exports[`Canonical Pashto On Demand TV Page Expired Episode a11y Assistive technology reads the brand and episode title as the headline 1`] = `" د بي بي سي خبرونه , ۲۸ می ۲۰۲۰"`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, پښتو",
  "url": "/pashto",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 2`] = `
{
  "text": "ولې تاسې پر بي بي سي خبرونو باور کولی شئ",
  "url": "https://www.bbc.com/pashto/institutional-49283007",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 3`] = `
{
  "text": "د کارولو شرايط",
  "url": "https://www.bbc.com/pashto/institutional-37620701",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 4`] = `
{
  "text": "د بي بي سي‌ په اړه",
  "url": "https://www.bbc.com/pashto/institutional-37622761",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 5`] = `
{
  "text": "د محرميت تگلاره",
  "url": "https://www.bbc.com/pashto/institutional-37622762",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 7`] = `
{
  "text": "زموږ سره اړیکي",
  "url": "https://www.bbc.co.uk/pashto/send/u50853533",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 8`] = `
{
  "text": "نورې ژبې",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer Anchors should match text and url 9`] = `
{
  "text": "د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Pashto On Demand TV Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pashto"`;

exports[`Canonical Pashto On Demand TV Page Footer Paragraphs should match text 1`] = `"© 2025 بي بي سي. بي بي‌ سي‌ د نورو ویبپاڼو د محتوا مسوله نه ده. د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره."`;

exports[`Canonical Pashto On Demand TV Page Header I can see the branding 1`] = `"BBC News, پښتو"`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 1`] = `
{
  "text": "کور پاڼه",
  "url": "/pashto",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 2`] = `
{
  "text": "افغانستان",
  "url": "/pashto/topics/cr50y57xj52t",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 3`] = `
{
  "text": "پښتونخوا",
  "url": "/pashto/topics/cz74k7wy49jt",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 4`] = `
{
  "text": "نړۍ",
  "url": "/pashto/topics/cxe2wdp2dv3t",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 5`] = `
{
  "text": "ښځې",
  "url": "/pashto/topics/cr50y5rq23gt",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 6`] = `
{
  "text": "لوبې",
  "url": "/pashto/topics/cr50y59q860t",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 7`] = `
{
  "text": "اقتصاد او سوداګري",
  "url": "/pashto/topics/cy087kqvl1yt",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 8`] = `
{
  "text": "ساینس او ټکنالوژي",
  "url": "/pashto/topics/ckgrvled11kt",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 9`] = `
{
  "text": "هنر او ادب",
  "url": "/pashto/topics/c8xqkd91knnt",
}
`;

exports[`Canonical Pashto On Demand TV Page Header Navigation link should match text and url 10`] = `
{
  "text": "راډیویي خپرونې",
  "url": "/pashto/topics/c9xz1ekw79nt",
}
`;

exports[`Canonical Pashto On Demand TV Page I can see the brand title 1`] = `" د بي بي سي خبرونه "`;

exports[`Canonical Pashto On Demand TV Page I can see the episode summary 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical Pashto On Demand TV Page I can see the episode title 1`] = `" د بي بي سي خبرونه "`;

exports[`Canonical Pashto On Demand TV Page Main heading should match text 1`] = `" د بي بي سي خبرونه , ۲۸ می ۲۰۲۰"`;

exports[`Canonical Pashto On Demand TV Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "۲۸:۰۰ویډیو,  د بي بي سي خبرونه ,  د بي بي سي خبرونه , موده ۲۸،۰۰ ۱۹ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_tv/tv/w172zmspxlzzsjn",
}
`;

exports[`Canonical Pashto On Demand TV Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "۲۸:۰۰ویډیو,  د بي بي سي خبرونه ,  د بي بي سي خبرونه , موده ۲۸،۰۰ ۱۸ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_tv/tv/w172zmspxlzwwmk",
}
`;

exports[`Canonical Pashto On Demand TV Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "۲۸:۰۰ویډیو,  د بي بي سي خبرونه ,  د بي بي سي خبرونه , موده ۲۸،۰۰ ۱۵ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_tv/tv/w172zmspkbphbn3",
}
`;

exports[`Canonical Pashto On Demand TV Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "۲۸:۰۰ویډیو,  د بي بي سي خبرونه ,  د بي بي سي خبرونه , موده ۲۸،۰۰ ۱۴ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_tv/tv/w172zmspkbpdfr0",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/pashto/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Pashto On Demand TV Page SEO Canonical link 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf"`;

exports[`Canonical Pashto On Demand TV Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Pashto On Demand TV Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Pashto On Demand TV Page SEO Heading level 1 1`] = `" د بي بي سي خبرونه , ۲۸ می ۲۰۲۰"`;

exports[`Canonical Pashto On Demand TV Page SEO Lang attribute 1`] = `"ps"`;

exports[`Canonical Pashto On Demand TV Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ps",
        "name": "Pashto",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf",
        "@type": "WebPage",
        "name": " د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
          "width": 1024,
        },
        "name": "BBC News پښتو",
        "publishingPrinciples": "https://www.bbc.com/pashto/institutional-49283007",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
      "url": "http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf",
    },
  ],
}
`;

exports[`Canonical Pashto On Demand TV Page SEO OG description 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical Pashto On Demand TV Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`Canonical Pashto On Demand TV Page SEO OG image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical Pashto On Demand TV Page SEO OG locale 1`] = `"ps"`;

exports[`Canonical Pashto On Demand TV Page SEO OG site name 1`] = `"BBC News پښتو"`;

exports[`Canonical Pashto On Demand TV Page SEO OG title 1`] = `" د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو - BBC News پښتو"`;

exports[`Canonical Pashto On Demand TV Page SEO OG type 1`] = `"website"`;

exports[`Canonical Pashto On Demand TV Page SEO OG url 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv/w172xcldhhrhmcf"`;

exports[`Canonical Pashto On Demand TV Page SEO Page title 1`] = `" د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو - BBC News پښتو"`;

exports[`Canonical Pashto On Demand TV Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter creator 1`] = `"@bbcpashto"`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter description 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter site 1`] = `"@bbcpashto"`;

exports[`Canonical Pashto On Demand TV Page SEO Twitter title 1`] = `" د بي بي سي خبرونه  -  د بي بي سي خبرونه  - BBC News پښتو - BBC News پښتو"`;

exports[`Canonical Pashto On Demand TV Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `" د بي بي سي خبرونه , ۲۸ می ۲۰۲۰"`;
